[gd_scene load_steps=6 format=2]

[ext_resource path="res://Mods/std-cards-set-01/pics/st-00001.png" type="Texture" id=1]
[ext_resource path="res://assets/Screen/CreateCard/EditCard/FamilyRaceCardEdit.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Screen/CreateCard/EditCard/EditCardTabContainer.gd" type="Script" id=3]
[ext_resource path="res://assets/Screen/CreateCard/EditEffect/EffectContainer.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Screen/CreateCard/EditTextEffect/TextEffectContainer.tscn" type="PackedScene" id=5]

[node name="EditCardTabContainer" type="TabContainer"]
margin_left = 320.0
margin_top = 16.0
margin_right = 976.0
margin_bottom = 507.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Tabs" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
tab_align = 0

[node name="CardIdLabel" type="Label" parent="Info"]
margin_left = 4.0
margin_top = 4.0
margin_right = 64.0
margin_bottom = 34.0
text = "Card Id :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardIdEdit" type="LineEdit" parent="Info"]
margin_left = 68.0
margin_top = 4.0
margin_right = 226.0
margin_bottom = 34.0
text = "GWIT-01-001"
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardNameLabel" type="Label" parent="Info"]
margin_left = 234.0
margin_top = 4.0
margin_right = 290.0
margin_bottom = 34.0
text = "Name :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardNameEdit" type="LineEdit" parent="Info"]
margin_left = 290.0
margin_top = 4.0
margin_right = 538.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardTypeOptionButton" type="OptionButton" parent="Info"]
margin_left = 548.0
margin_top = 4.0
margin_right = 644.0
margin_bottom = 34.0
text = "Hollow"
items = [ "Hollow", null, false, 0, null, "Magic", null, false, 1, null, "Area", null, false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FamilyRaceCardEdit" parent="Info" instance=ExtResource( 2 )]

[node name="Line2D" type="Line2D" parent="Info"]
position = Vector2( 13.1428, 394 )
scale = Vector2( 1.52381, 1 )
points = PoolVector2Array( -4, 2, 412, 2 )
width = 2.0
default_color = Color( 0.454902, 0.454902, 0.454902, 1 )

[node name="AlternativeCheckBox" type="CheckBox" parent="Info"]
margin_left = 12.0
margin_top = 411.0
margin_right = 162.0
margin_bottom = 439.0
text = "Alternative Card?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RealCardIdLabel" type="Label" parent="Info"]
margin_left = 222.0
margin_top = 411.0
margin_right = 318.0
margin_bottom = 441.0
text = "Real Card Id :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RealCardIdEdit" type="LineEdit" parent="Info"]
margin_left = 340.0
margin_top = 410.0
margin_right = 630.0
margin_bottom = 440.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FamilyRaceCardEdit2" parent="Info" instance=ExtResource( 2 )]
margin_left = 234.0
margin_right = 456.0
typeState = 1

[node name="Control" type="Control" parent="Info"]
visible = false
margin_left = 236.0
margin_top = 42.0
margin_right = 276.0
margin_bottom = 82.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="Info/Control"]
margin_right = 44.0
margin_bottom = 24.0
text = "Race :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer2" type="ScrollContainer" parent="Info/Control"]
margin_left = -2.0
margin_top = 32.0
margin_right = 220.0
margin_bottom = 264.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Info/Control/ScrollContainer2"]
margin_right = 104.0
margin_bottom = 220.0

[node name="CheckBox2" type="CheckBox" parent="Info/Control/ScrollContainer2/VBoxContainer"]
margin_right = 104.0
margin_bottom = 24.0
text = "RaceName1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox3" type="CheckBox" parent="Info/Control/ScrollContainer2/VBoxContainer"]
margin_top = 28.0
margin_right = 104.0
margin_bottom = 52.0
text = "RaceName2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox4" type="CheckBox" parent="Info/Control/ScrollContainer2/VBoxContainer"]
margin_top = 56.0
margin_right = 104.0
margin_bottom = 80.0
text = "RaceName3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox5" type="CheckBox" parent="Info/Control/ScrollContainer2/VBoxContainer"]
margin_top = 84.0
margin_right = 104.0
margin_bottom = 108.0
text = "RaceName4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox6" type="CheckBox" parent="Info/Control/ScrollContainer2/VBoxContainer"]
margin_top = 112.0
margin_right = 104.0
margin_bottom = 136.0
text = "RaceName5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox7" type="CheckBox" parent="Info/Control/ScrollContainer2/VBoxContainer"]
margin_top = 140.0
margin_right = 104.0
margin_bottom = 164.0
text = "RaceName6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox8" type="CheckBox" parent="Info/Control/ScrollContainer2/VBoxContainer"]
margin_top = 168.0
margin_right = 104.0
margin_bottom = 192.0
text = "RaceName7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox9" type="CheckBox" parent="Info/Control/ScrollContainer2/VBoxContainer"]
margin_top = 196.0
margin_right = 104.0
margin_bottom = 220.0
text = "RaceName8"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="Info/Control"]
margin_top = 276.0
margin_right = 220.0
margin_bottom = 340.0
text = "RaceName1, RaceName2, RaceName3, RaceName4, RaceName5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ElementLabel" type="Label" parent="Info"]
margin_left = 468.0
margin_top = 42.0
margin_right = 540.0
margin_bottom = 72.0
text = "Element :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ElementOptionButton" type="OptionButton" parent="Info"]
margin_left = 468.0
margin_top = 78.0
margin_right = 644.0
margin_bottom = 108.0
text = "Element"
items = [ "Element", null, false, 0, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GradeLabel" type="Label" parent="Info"]
margin_left = 468.0
margin_top = 122.0
margin_right = 524.0
margin_bottom = 154.0
text = "Grade :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GradeSpinBox" type="SpinBox" parent="Info"]
margin_left = 556.0
margin_top = 123.0
margin_right = 644.0
margin_bottom = 155.0
max_value = 3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ATKLabel" type="Label" parent="Info"]
margin_left = 468.0
margin_top = 166.0
margin_right = 518.0
margin_bottom = 198.0
text = "ATK :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ATKSpinBox" type="SpinBox" parent="Info"]
margin_left = 556.0
margin_top = 166.0
margin_right = 643.0
margin_bottom = 198.0
max_value = 99.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPLabel" type="Label" parent="Info"]
margin_left = 468.0
margin_top = 206.0
margin_right = 508.0
margin_bottom = 238.0
text = "HP :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPSpinBox" type="SpinBox" parent="Info"]
margin_left = 556.0
margin_top = 206.0
margin_right = 644.0
margin_bottom = 238.0
max_value = 99.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D3" type="Line2D" parent="Info"]
position = Vector2( 462.62, 250 )
scale = Vector2( 0.436599, 1 )
points = PoolVector2Array( -4, 2, 412, 2 )
width = 2.0
default_color = Color( 0.454902, 0.454902, 0.454902, 1 )

[node name="MagicTypeLabel" type="Label" parent="Info"]
margin_left = 468.0
margin_top = 260.0
margin_right = 563.0
margin_bottom = 292.0
text = "Magic Type :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MagicTypeOptionButton" type="OptionButton" parent="Info"]
margin_left = 468.0
margin_top = 298.0
margin_right = 644.0
margin_bottom = 326.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D2" type="Line2D" parent="Info"]
position = Vector2( 462.399, 336 )
scale = Vector2( 0.438649, 1 )
points = PoolVector2Array( -4, 2, 412, 2 )
width = 2.0
default_color = Color( 0.454902, 0.454902, 0.454902, 1 )

[node name="AreaTurnLabel" type="Label" parent="Info"]
margin_left = 468.0
margin_top = 350.0
margin_right = 516.0
margin_bottom = 382.0
text = "Turn :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AreaTurnSpinBox" type="SpinBox" parent="Info"]
margin_left = 524.0
margin_top = 350.0
margin_right = 644.0
margin_bottom = 382.0
max_value = 99.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Effect" type="Tabs" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ScrollContainer" type="ScrollContainer" parent="Effect"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EffectContainer" parent="Effect/ScrollContainer" instance=ExtResource( 4 )]

[node name="Text" type="Tabs" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="TextureRect" type="TextureRect" parent="Text"]
visible = false
margin_left = 428.0
margin_top = 10.0
margin_right = 636.0
margin_bottom = 298.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Text"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Text/HBoxContainer"]
margin_right = 322.0
margin_bottom = 455.0
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="Text/HBoxContainer/VBoxContainer"]
margin_right = 322.0
margin_bottom = 14.0
text = "Description :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescTextEdit" type="TextEdit" parent="Text/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 322.0
margin_bottom = 287.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Text/HBoxContainer/VBoxContainer"]
margin_top = 291.0
margin_right = 322.0
margin_bottom = 305.0
text = "Flavor :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlavorTextEdit" type="TextEdit" parent="Text/HBoxContainer/VBoxContainer"]
margin_top = 309.0
margin_right = 322.0
margin_bottom = 409.0
rect_min_size = Vector2( 322, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Text/HBoxContainer/VBoxContainer"]
margin_top = 413.0
margin_right = 322.0
margin_bottom = 427.0
text = "Artist :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArtistLineEdit" type="LineEdit" parent="Text/HBoxContainer/VBoxContainer"]
margin_top = 431.0
margin_right = 322.0
margin_bottom = 455.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="Text/HBoxContainer"]
margin_left = 326.0
margin_right = 648.0
margin_bottom = 455.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Text/HBoxContainer/VBoxContainer2"]
margin_right = 322.0
margin_bottom = 14.0
text = "Text Effects :"

[node name="ScrollContainer" type="ScrollContainer" parent="Text/HBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 322.0
margin_bottom = 455.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextEffectContainer" parent="Text/HBoxContainer/VBoxContainer2/ScrollContainer" instance=ExtResource( 5 )]

[connection signal="item_selected" from="Info/CardTypeOptionButton" to="." method="_on_CardTypeOptionButton_item_selected"]
[connection signal="toggled" from="Info/AlternativeCheckBox" to="." method="_on_AlternativeCheckBox_toggled"]
